--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link href="Assets/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container-fluid main-header">
             <h1>Weather Dashboard</h1>
           </div>
-        <ul class="nav flex-column">
+        <ul class="nav flex-column left-nav col-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Active</a>
+              <h2>Search for a City:</h2>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
