--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="nav flex-column left-nav col-3">
           <h2>Search for a City</h2>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="City name" aria-label="Recipient's username" aria-describedby="basic-addon2" id="search-input">
+            <input type="text" class="form-control search-input" placeholder="City name" aria-label="Recipient's username" aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
             </div>
@@ -25,6 +25,6 @@
         </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="Assets/script.js"></script>
+<script src="Assets/script3.js"></script>
     </body>
 </html>
