--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
         <div class="container-fluid main-header">
             <h1>Weather Dashboard</h1>
           </div>
-        <div class="nav flex-column left-nav col-3">
-          <h2>Search for a City</h2>
-          <div class="input-group mb-3">
-            <input type="text" class="form-control search-input" placeholder="City name" aria-label="Recipient's username" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
+
+
+        <div class = "container">
+          <div class="row">
+            <div class="nav flex-column left-nav col-3">
+              <h2>Search for a City</h2>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control search-input" placeholder="City name" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
+                </div>
+              </div>
+            </div>
+            <div class="container-fluid flex-column col-9" id="main-weather">
+
             </div>
           </div>
-        </div>
-        <div class="nav flex-column left-nav col-3">
-        </div>
-        <div class="container-fluid col-6" id="main-weather">
-
         </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
