--- a/search-results.html
+++ b/search-results.html
@@ -9,20 +9,29 @@
         <div class="container-fluid main-header">
             <h1>Weather Dashboard</h1>
           </div>
-        <div class="nav flex-column left-nav col-3">
-          <h2>Search for a City</h2>
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="City name" aria-label="Recipient's username" aria-describedby="basic-addon2" id="search-input">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
+          <div class = "container">
+            <div class="row">
+              <div class="nav flex-column left-nav col-3">
+                <h2>Search for a City</h2>
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control search-input" placeholder="City name" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
+                  </div>
+                </div>
+              </div>
+                <div class="container-fluid flex-column col-8" id="main-weather">
+                    <div class="card col-sm-10 justify-content-center">
+                        <div class="card-body">
+                            <h5 class="card-date">Card title</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                  </div>
+
+              </div>
             </div>
           </div>
-        </div>
-        <div class="nav flex-column left-nav col-3">
-        </div>
-        <div class="container-fluid col-6" id="main-weather">
-
-        </div>
+  
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="Assets/script3.js"></script>
