--- a/search-results.html
+++ b/search-results.html
@@ -21,11 +21,6 @@
                 </div>
               </div>
                 <div class="container-fluid flex-column col-8" id="main-weather">
-                    <div class="card col-sm-10 justify-content-center">
-                        <div class="card-body">
-                            <h5 class="card-date">Card title</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    </div>
                   </div>
 
               </div>
@@ -34,6 +29,7 @@
   
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 <script src="Assets/script3.js"></script>
 <script src="Assets/display-search.js"></script>
     </body>
