--- a/search-results.html
+++ b/search-results.html
@@ -22,7 +22,12 @@
               </div>
                 <div class="container-fluid flex-column col-8" id="main-weather">
                   </div>
+                <div class=" container-fluid flex column col-8" id="forecast-weather">
+                    <h4>5-Day Forecast:</h4>
+                    <div class="row" id="forecast-cards">
 
+                    </div>
+                </div>
               </div>
             </div>
           </div>
