--- a/search-results.html
+++ b/search-results.html
@@ -19,6 +19,9 @@
                     <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
                   </div>
                 </div>
+                <div class="mb-4" id="search-history">
+                  
+                </div>
               </div>
                 <div class="container-fluid flex-column col-8" id="main-weather">
                   </div>
