--- a/search-results.html
+++ b/search-results.html
@@ -19,18 +19,23 @@
                     <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
                   </div>
                 </div>
-                <div class="mb-4" id="search-history">
-                  
+                <div class="mb-4">
+                  <h4>Search History</h4>
+                  <ul class="list-group"id="search-history">
+
+                  </ul>
                 </div>
               </div>
-                <div class="container-fluid flex-column col-8" id="main-weather">
+                <div class="flex-column col-8" id="main-container">
+                <div id="main-weather">
                   </div>
-                <div class=" container-fluid flex column col-8" id="forecast-weather">
+                <div id="forecast-weather">
                     <h4>5-Day Forecast:</h4>
                     <div class="row" id="forecast-cards">
 
                     </div>
                 </div>
+              </div>
               </div>
             </div>
           </div>
