--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link href="Assets/style.css" rel="stylesheet">
+        <title>Weather Dashboard</title>
     </head>
     <body>
         <div class="container-fluid main-header">
@@ -13,6 +14,7 @@
 
         <div class = "container">
           <div class="row">
+            <nav>
             <div class="nav flex-column left-nav col-3">
               <h2>Search for a City</h2>
               <div class="input-group mb-3">
@@ -22,9 +24,12 @@
                 </div>
               </div>
             </div>
+            </nav>
+            <main>
             <div class="container-fluid flex-column col-9" id="main-weather">
 
             </div>
+            </main>
           </div>
         </div>
 
