--- a/search-results.html
+++ b/search-results.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link href="Assets/style.css" rel="stylesheet">
-        <title>Weather Dashboard</title>
-    </head>
-    <body>
-        <div class="container-fluid main-header">
-            <h1>Weather Dashboard</h1>
+  <head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="Assets/style.css" rel="stylesheet">
+    <title>Weather Dashboard</title>
+  </head>
+  <body>
+    <div class="container-fluid main-header">
+      <h1>Weather Dashboard</h1>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="nav flex-column left-nav col-3">
+          <h2>Search for a City</h2>
+          <div class="input-group mb-3">
+            <input type="text" class="form-control search-input" placeholder="City name" aria-label="Recipient's username" aria-describedby="basic-addon2">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
+              </div>
           </div>
-          <div class="container">
-            <div class="row">
-              <div class="nav flex-column left-nav col-3">
-                <h2>Search for a City</h2>
-                <div class="input-group mb-3">
-                  <input type="text" class="form-control search-input" placeholder="City name" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                  <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
-                  </div>
-                </div>
-                <div class="mb-4">
-                  <h4>Search History</h4>
-                  <ul class="list-group"id="search-history">
-
-                  </ul>
-                </div>
-              </div>
-                <div class="flex-column col-8" id="main-container">
-                <div id="main-weather">
-                  </div>
-                <div id="forecast-weather">
-                    <h4>5-Day Forecast:</h4>
-                    <div class="row" id="forecast-cards">
-
-                    </div>
-                </div>
-              </div>
+            <div class="mb-4">
+              <h4>Search History</h4>
+              <ul class="list-group"id="search-history">
+              </ul>
+            </div>
+        </div>
+          <div class="flex-column col-8" id="main-container">
+            <div id="main-weather">
+            </div>
+            <div id="forecast-weather">
+              <h4>5-Day Forecast:</h4>
+              <div class="row" id="forecast-cards">
               </div>
             </div>
           </div>
-  
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-<script src="Assets/script3.js"></script>
-<script src="Assets/display-search.js"></script>
-    </body>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="Assets/script3.js"></script>
+    <script src="Assets/display-search.js"></script>
+  </body>
 </html>
